--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 # .gitignore
+# Ignore node_modules in both frontend and backend
 node_modules/
+front-end/node_modules/
+backend/node_modules/
+
 .env
 dist/
 build/
